feat: added search by category
